# determinagent

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI-REFERENCE.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  coverage.json  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
determinagent/: __init__.py  agent.py  constants.py  parsers.py  sessions.py  validation.py
determinagent/adapters/: copilot.py  gemini.py
docs/: architecture.md  changelog.md  cli-reference.md  code-of-conduct.md  contributing.md  index.md  release-checklist.md  roadmap.md  security.md
docs/api/: adapters.md  agent.md  exceptions.md  index.md  sessions.md
docs/tutorials/: blog_flow.md  first_flow.md
flows/: README.md
flows/blog/: README.md  main.py  main.yaml
scripts/: README.md  build.sh  bump_version.py  check-all.sh  check_env.py  docs.sh  lint.sh  setup.sh  test-cov.sh  test.sh  typecheck.sh  validate_links.py  validate_providers.py  verify_integrations.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/adapters/: index.html
site/api/agent/: index.html
site/api/exceptions/: index.html
site/api/sessions/: index.html
site/architecture/: index.html
site/changelog/: index.html
site/cli-reference/: index.html
site/code-of-conduct/: index.html
site/contributing/: index.html
site/license/: index.html
site/plan/: index.html
site/release-checklist/: index.html
site/roadmap/: index.html
site/search/: search_index.json
site/security/: index.html
site/tutorials/blog_flow/: index.html
site/tutorials/first_flow/: index.html
tests/: __init__.py  conftest.py  test_adapters.py  test_agent.py  test_blog_flow.py  test_cli_utils.py  test_config.py  test_coverage_fix.py  test_parsers.py  test_sessions.py  test_ui.py  test_utils.py  test_validation.py
